crates/ruff_python_parser/tests/snapshots/invalid_syntax@assign_stmt_invalid_value_expr.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/assign_stmt_invalid_value_expr.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(
            47,
        ),
        range: 0..90,
        body: [
            Assign(
                StmtAssign {
                    node_index: NodeIndex(
                        9,
                    ),
                    range: 0..15,
                    targets: [
                        Name(
                            ExprName {
                                node_index: NodeIndex(
                                    1,
                                ),
                                range: 0..1,
                                id: Name("x"),
                                ctx: Store,
                            },
                        ),
                    ],
                    value: Tuple(
                        ExprTuple {
                            node_index: NodeIndex(
                                8,
                            ),
                            range: 4..15,
                            elts: [
                                Starred(
                                    ExprStarred {
                                        node_index: NodeIndex(
                                            7,
                                        ),
                                        range: 5..13,
                                        value: BoolOp(
                                            ExprBoolOp {
                                                node_index: NodeIndex(
                                                    6,
                                                ),
                                                range: 6..13,
                                                op: And,
                                                values: [
                                                    Name(
                                                        ExprName {
                                                            node_index: NodeIndex(
                                                                3,
                                                            ),
                                                            range: 6..7,
                                                            id: Name("a"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    Name(
                                                        ExprName {
                                                            node_index: NodeIndex(
                                                                5,
                                                            ),
                                                            range: 12..13,
                                                            id: Name("b"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                ],
                                            },
                                        ),
                                        ctx: Load,
                                    },
                                ),
                            ],
                            ctx: Load,
                            parenthesized: true,
                        },
                    ),
                },
            ),
            Assign(
                StmtAssign {
                    node_index: NodeIndex(
                        18,
                    ),
                    range: 16..34,
                    targets: [
                        Name(
                            ExprName {
                                node_index: NodeIndex(
                                    11,
                                ),
                                range: 16..17,
                                id: Name("x"),
                                ctx: Store,
                            },
                        ),
                    ],
                    value: Tuple(
                        ExprTuple {
                            node_index: NodeIndex(
                                17,
                            ),
                            range: 20..34,
                            elts: [
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        node_index: NodeIndex(
                                            12,
                                        ),
                                        range: 21..23,
                                        value: Int(
                                            42,
                                        ),
                                    },
                                ),
                                Starred(
                                    ExprStarred {
                                        node_index: NodeIndex(
                                            16,
                                        ),
                                        range: 25..33,
                                        value: Yield(
                                            ExprYield {
                                                node_index: NodeIndex(
                                                    15,
                                                ),
                                                range: 26..33,
                                                value: Some(
                                                    Name(
                                                        ExprName {
                                                            node_index: NodeIndex(
                                                                14,
                                                            ),
                                                            range: 32..33,
                                                            id: Name("x"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        ctx: Load,
                                    },
                                ),
                            ],
                            ctx: Load,
                            parenthesized: true,
                        },
                    ),
                },
            ),
            Assign(
                StmtAssign {
                    node_index: NodeIndex(
                        27,
                    ),
                    range: 35..58,
                    targets: [
                        Name(
                            ExprName {
                                node_index: NodeIndex(
                                    20,
                                ),
                                range: 35..36,
                                id: Name("x"),
                                ctx: Store,
                            },
                        ),
                    ],
                    value: Tuple(
                        ExprTuple {
                            node_index: NodeIndex(
                                26,
                            ),
                            range: 39..58,
                            elts: [
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        node_index: NodeIndex(
                                            21,
                                        ),
                                        range: 40..42,
                                        value: Int(
                                            42,
                                        ),
                                    },
                                ),
                                Starred(
                                    ExprStarred {
                                        node_index: NodeIndex(
                                            25,
                                        ),
                                        range: 44..57,
                                        value: YieldFrom(
                                            ExprYieldFrom {
                                                node_index: NodeIndex(
                                                    24,
                                                ),
                                                range: 45..57,
                                                value: Name(
                                                    ExprName {
                                                        node_index: NodeIndex(
                                                            23,
                                                        ),
                                                        range: 56..57,
                                                        id: Name("x"),
                                                        ctx: Load,
                                                    },
                                                ),
                                            },
                                        ),
                                        ctx: Load,
                                    },
                                ),
                            ],
                            ctx: Load,
                            parenthesized: true,
                        },
                    ),
                },
            ),
            Assign(
                StmtAssign {
                    node_index: NodeIndex(
                        39,
                    ),
                    range: 59..78,
                    targets: [
                        Name(
                            ExprName {
                                node_index: NodeIndex(
                                    29,
                                ),
                                range: 59..60,
                                id: Name("x"),
                                ctx: Store,
                            },
                        ),
                    ],
                    value: Tuple(
                        ExprTuple {
                            node_index: NodeIndex(
                                38,
                            ),
                            range: 63..78,
                            elts: [
                                Starred(
                                    ExprStarred {
                                        node_index: NodeIndex(
                                            37,
                                        ),
                                        range: 64..76,
                                        value: Lambda(
                                            ExprLambda {
                                                node_index: NodeIndex(
                                                    36,
                                                ),
                                                range: 65..76,
                                                parameters: Some(
                                                    Parameters {
                                                        range: 72..73,
                                                        node_index: NodeIndex(
                                                            30,
                                                        ),
                                                        posonlyargs: [],
                                                        args: [
                                                            ParameterWithDefault {
                                                                range: 72..73,
                                                                node_index: NodeIndex(
                                                                    33,
                                                                ),
                                                                parameter: Parameter {
                                                                    range: 72..73,
                                                                    node_index: NodeIndex(
                                                                        32,
                                                                    ),
                                                                    name: Identifier {
                                                                        id: Name("x"),
                                                                        range: 72..73,
                                                                        node_index: NodeIndex(
                                                                            31,
                                                                        ),
                                                                    },
                                                                    annotation: None,
                                                                },
                                                                default: None,
                                                            },
                                                        ],
                                                        vararg: None,
                                                        kwonlyargs: [],
                                                        kwarg: None,
                                                    },
                                                ),
                                                body: Name(
                                                    ExprName {
                                                        node_index: NodeIndex(
                                                            35,
                                                        ),
                                                        range: 75..76,
                                                        id: Name("x"),
                                                        ctx: Load,
                                                    },
                                                ),
                                            },
                                        ),
                                        ctx: Load,
                                    },
                                ),
                            ],
                            ctx: Load,
                            parenthesized: true,
                        },
                    ),
                },
            ),
            Assign(
                StmtAssign {
                    node_index: NodeIndex(
                        44,
                    ),
                    range: 79..84,
                    targets: [
                        Name(
                            ExprName {
                                node_index: NodeIndex(
                                    41,
                                ),
                                range: 79..80,
                                id: Name("x"),
                                ctx: Store,
                            },
                        ),
                    ],
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(
                                43,
                            ),
                            range: 83..84,
                            id: Name("x"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        46,
                    ),
                    range: 88..89,
                    value: NumberLiteral(
                        ExprNumberLiteral {
                            node_index: NodeIndex(
                                45,
                            ),
                            range: 88..89,
                            value: Int(
                                1,
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | x = (*a and b,)
  |       ^^^^^^^ Syntax Error: Boolean expression cannot be used here
2 | x = (42, *yield x)
3 | x = (42, *yield from x)
  |


  |
1 | x = (*a and b,)
2 | x = (42, *yield x)
  |           ^^^^^^^ Syntax Error: Yield expression cannot be used here
3 | x = (42, *yield from x)
4 | x = (*lambda x: x,)
  |


  |
1 | x = (*a and b,)
2 | x = (42, *yield x)
3 | x = (42, *yield from x)
  |           ^^^^^^^^^^^^ Syntax Error: Yield expression cannot be used here
4 | x = (*lambda x: x,)
5 | x = x := 1
  |


  |
2 | x = (42, *yield x)
3 | x = (42, *yield from x)
4 | x = (*lambda x: x,)
  |       ^^^^^^^^^^^ Syntax Error: Lambda expression cannot be used here
5 | x = x := 1
  |


  |
3 | x = (42, *yield from x)
4 | x = (*lambda x: x,)
5 | x = x := 1
  |       ^^ Syntax Error: Expected a statement
  |
